NHSO-21790: Fix for vertically aligning get help link in biometric error page

--- a/web/src/style/custom/a-inline.scss
+++ b/web/src/style/custom/a-inline.scss
@@ -1,3 +1,4 @@
 .inline-hyperlink {
     display: inline;
+    vertical-align: baseline;
   }
